@@ -1,3 +1,7 @@
+2016-06-15  Hanna Knutsson <hanna_k@fmgirl.com>
+
+	* Use QTextEdit instead of KHTML (even though some formatting is lost)
+
 2016-06-14  Hanna Knutsson <hanna_k@fmgirl.com>
 
 	* Make sure save filename ends with ".eqz"
